# tree-sitter-glorp

./: .editorconfig  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  test.glorp  tree-sitter.json
bindings/c/: tree-sitter-glorp.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_glorp/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterGlorp/: glorp.h
bindings/swift/TreeSitterGlorpTests/: TreeSitterGlorpTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: comment.test  expression.test
